--- a/restful-api/package.json
+++ b/restful-api/package.json
@@ -15,7 +15,8 @@
   "dependencies": {},
   "devDependencies": {
     "eslint": "^8.0.1",
-    "eslint-plugin-node": "^11.1.0"
+    "eslint-plugin-node": "^11.1.0",
+    "prettier": "^2.4.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
